syntax = "proto3";
package bookmark;

message Bookmark {
  string id = 1;
  int64  created_at = 2;
  uint64  created_by = 3;
  uint64  project_id = 4;
  optional bytes query = 5;
}